[package]
name = "ws-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
pretty_env_logger = "0.5.0"
tokio-stream = "0.1.0"
